svg overflow fix

--- a/assets/src/sass/sections/_greeting.scss
+++ b/assets/src/sass/sections/_greeting.scss
@@ -72,6 +72,7 @@ $color: #fff;
 
 @include mq($tablet) {
   .greeting {
+    overflow: hidden;
     text-align: center;
 
     .container {
